delete sync handler skel and run syncs in background
