# myncer-web/src/generated_api/src/models/DeleteSyncRequest.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Myncer API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface DeleteSyncRequest
+ */
+export interface DeleteSyncRequest {
+    /**
+     * The id of the sync to delete
+     * @type {string}
+     * @memberof DeleteSyncRequest
+     */
+    syncId: string;
+}
+
+/**
+ * Check if a given object implements the DeleteSyncRequest interface.
+ */
+export function instanceOfDeleteSyncRequest(value: object): value is DeleteSyncRequest {
+    if (!('syncId' in value) || value['syncId'] === undefined) return false;
+    return true;
+}
+
+export function DeleteSyncRequestFromJSON(json: any): DeleteSyncRequest {
+    return DeleteSyncRequestFromJSONTyped(json, false);
+}
+
+export function DeleteSyncRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): DeleteSyncRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'syncId': json['syncId'],
+    };
+}
+
+export function DeleteSyncRequestToJSON(json: any): DeleteSyncRequest {
+    return DeleteSyncRequestToJSONTyped(json, false);
+}
+
+export function DeleteSyncRequestToJSONTyped(value?: DeleteSyncRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'syncId': value['syncId'],
+    };
+}
+
