# openapi/api.yaml
@@ -221,14 +221,36 @@ paths:
             schema:
               $ref: "#/components/schemas/CreateSyncRequest"
       responses:
-        201:
-          description: Sync created successfully.
+        202:
+          description: Sync is accepted and triggered.
         400:
           description: Bad Request
         401:
           description: Unauthorized
         500:
           description: Internal Server Error
+  /syncs/delete:
+    post:
+      summary: Deletes sync by id.
+      description: |
+        Deletes a sync by id.
+      operationId: deleteSync
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/DeleteSyncRequest"
+      responses:
+        200:
+          description: Success
+        400:
+          description: Bad Request
+        401:
+          description: Unauthorized
+        500:
+          description: Internal Server Error
+
   /syncs/list:
     get:
       summary: List all syncs.
@@ -525,3 +547,11 @@ components:
             - COMPLETED
             - FAILED
             - CANCELLED
+    DeleteSyncRequest:
+      type: object
+      required:
+        - syncId
+      properties:
+        syncId:
+          type: string
+          description: The id of the sync to delete
