# server/api/model_delete_sync_request.go
@@ -1,0 +1,159 @@
+/*
+Myncer API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the DeleteSyncRequest type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &DeleteSyncRequest{}
+
+// DeleteSyncRequest struct for DeleteSyncRequest
+type DeleteSyncRequest struct {
+	// The id of the sync to delete
+	SyncId string `json:"syncId"`
+}
+
+type _DeleteSyncRequest DeleteSyncRequest
+
+// NewDeleteSyncRequest instantiates a new DeleteSyncRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewDeleteSyncRequest(syncId string) *DeleteSyncRequest {
+	this := DeleteSyncRequest{}
+	this.SyncId = syncId
+	return &this
+}
+
+// NewDeleteSyncRequestWithDefaults instantiates a new DeleteSyncRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewDeleteSyncRequestWithDefaults() *DeleteSyncRequest {
+	this := DeleteSyncRequest{}
+	return &this
+}
+
+// GetSyncId returns the SyncId field value
+func (o *DeleteSyncRequest) GetSyncId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.SyncId
+}
+
+// GetSyncIdOk returns a tuple with the SyncId field value
+// and a boolean to check if the value has been set.
+func (o *DeleteSyncRequest) GetSyncIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.SyncId, true
+}
+
+// SetSyncId sets field value
+func (o *DeleteSyncRequest) SetSyncId(v string) {
+	o.SyncId = v
+}
+
+func (o DeleteSyncRequest) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o DeleteSyncRequest) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["syncId"] = o.SyncId
+	return toSerialize, nil
+}
+
+func (o *DeleteSyncRequest) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"syncId",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varDeleteSyncRequest := _DeleteSyncRequest{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varDeleteSyncRequest)
+
+	if err != nil {
+		return err
+	}
+
+	*o = DeleteSyncRequest(varDeleteSyncRequest)
+
+	return err
+}
+
+type NullableDeleteSyncRequest struct {
+	value *DeleteSyncRequest
+	isSet bool
+}
+
+func (v NullableDeleteSyncRequest) Get() *DeleteSyncRequest {
+	return v.value
+}
+
+func (v *NullableDeleteSyncRequest) Set(val *DeleteSyncRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableDeleteSyncRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableDeleteSyncRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableDeleteSyncRequest(val *DeleteSyncRequest) *NullableDeleteSyncRequest {
+	return &NullableDeleteSyncRequest{value: val, isSet: true}
+}
+
+func (v NullableDeleteSyncRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableDeleteSyncRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
